--- a/public/assets/scss/component/_portfolio.scss
+++ b/public/assets/scss/component/_portfolio.scss
@@ -92,7 +92,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: center;
 	}
 }
 .portfolio-hover-items-wrapper {
@@ -299,6 +299,10 @@
 
 // portfolio-faq style
 .portfolio-faq-wrapper {
+	h2{
+		text-transform: uppercase;
+	}
+
 	h4 {
 		font-size: 30px;
 		text-transform: uppercase;
